<resources>
    <string name="app_name">UITestNew</string>
    <string name="buttonSignIn">登录</string>
    <string name="textAccountNumber">账号：</string>
    <string name="textPassward">密码：</string>
    <string name="buttonSignUp">注册</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="text_version">version_1.0_createdByYZY</string>
    <string name="button1">校园论坛</string>
    <string name="button2">校园动态</string>
    <string name="button3">个人主页</string>
    <string name="editText">Name</string>
    <string name="button">登录</string>
    <string name="text">TODO</string>
    <string name="mima">密码</string>
    <string name="username">用户名</string>
    <string name="version1_2_0">version1.2.0</string>
    <string name="textview">好家伙我学到了</string>
    <string name="textview2">Display</string>
    <string name="button8">左按键</string>
    <string name="button9">右按键</string>
    <string name="switch1">开关</string>
    <string name="button10">确定</string>
    <string name="edittext">请输入数值</string>
    <string name="radiobutton">girl</string>
    <string name="radiobutton2">mouse</string>
    <string name="imageview">猫</string>
    <string name="checkbox">高等数学</string>
    <string name="checkbox2">线性代数</string>
    <string name="checkbox3">计算机导论</string>
    <string name="UIDemo1">UIDemo1</string>
    <string name="UIDemo2">UIDemo2</string>
</resources>